Fix sidebar spacing issues

--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -18,4 +18,5 @@
     clear: both;
     width: 100px;
     border: 2px solid $color__camellia-secondary;
+    margin-left:0.75em;
  }
